# ML_Telecom

./: Makefile  README.md  SetYouUp.ipynb  pyproject.toml  requirements.txt
ml_telecom/: __init__.py  dataset.py
notebooks/: Classification.ipynb  Eda_customer_address.ipynb  Eda_customer_satisfaction.ipynb
