[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "ml_telecom"
version = "0.0.1"
description = "Description"
authors = [
  { name = "Agam Singh Saini" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "black",
    "flake8",
    "isort",
    "loguru",
    "mkdocs",
    "pip",
    "python-dotenv",
    "tqdm",
    "typer",
    "altair (>=5.5.0,<6.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scipy (>=1.16.1,<2.0.0)",
    "wordcloud (>=1.9.4,<2.0.0)",
    "ipython (>=9.5.0,<10.0.0)",
    "plotly (>=6.3.0,<7.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "imblearn (>=0.0,<0.1)",
]
requires-python = "^3.11.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["ml_telecom"]
force_sort_within_sections = true


